Basic skeleton done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <div></div>
-    <div></div>
+    <div id="calculator">
+      <div id="calculator-text">
+        <label id="calc-label">23+5</label>
+      </div>
+      <div id="button-container"></div>
+    </div>
   </body>
 </html>
