Fixed basic functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <div id="calculator">
       <div id="calculator-text">
-        <label id="calc-label">23+5</label>
+        <label id="input-label">23+5</label>
+        <label id="output-label">asdfasdf</label>
       </div>
       <div id="button-container"></div>
     </div>
