--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div id="calculator">
       <div id="calculator-text">
-        <label id="input-label">23+5</label>
-        <label id="output-label">asdfasdf</label>
+        <label id="input-label"></label>
+        <label id="output-label"></label>
       </div>
       <div id="button-container"></div>
     </div>
