Functionality complete, todo in .js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <label id="input-label"></label>
         <label id="output-label"></label>
       </div>
-      <div id="button-container"></div>
+      <div id="button-container">
+        <div id="digit-container"></div>
+        <div id="operator-container"></div>
+      </div>
     </div>
   </body>
 </html>
