--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     </div>
     <div id="explanatory-text-container">
       <label id="label-keyboard">Supports keyboard buttons as well!</label>
-      <label id="label-button-c" class="label-button-explanations">Press .. to clear entries</label>
-      <label id="label-button-c" class="label-button-explanations">Press .. to get answer</label>
+      <label id="label-button-c" class="label-button-explanations">
+        Press <img src="../Calculator/Images/C.png" alt="C-button" class="image-button"> to clear all entries
+      </label>
+      <label id="label-button-c" class="label-button-explanations">
+        Press <img src="../Calculator/Images/Enter.png" alt="Enter-button" class="image-button"> to get the answer
+      </label>
     </div>
   </body>
 </html>
