--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculator</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="../Images/David.jpg">
   </head>
 
   <body>
@@ -14,8 +15,8 @@
       <div id="calculator-text">
         <label class="explanatory-label display-label left-label">Input</label>
         <label class="explanatory-label display-label right-label">Output</label>
-        <label id="input-label" class="display-label left-label"></label>
-        <label id="output-label" class="display-label right-label"></label>
+        <label id="input-label" class="display-label left-label input-output"></label>
+        <label id="output-label" class="display-label right-label input-output"></label>
       </div>
       <div id="button-container">
         <div id="digit-container"></div>
@@ -25,10 +26,10 @@
     <div id="explanatory-text-container">
       <label id="label-keyboard">Supports keyboard buttons as well!</label>
       <label id="label-button-c" class="label-button-explanations">
-        Press <img src="../Calculator/Images/C.png" alt="C-button" class="image-button"> to clear all entries
+        Press <img src="../Images/C.png" alt="C-button" class="image-button"> to clear all entries
       </label>
       <label id="label-button-c" class="label-button-explanations">
-        Press <img src="../Calculator/Images/Enter.png" alt="Enter-button" class="image-button"> to get the answer
+        Press <img src="../Images/Enter.png" alt="Enter-button" class="image-button"> to get the answer
       </label>
     </div>
   </body>
