--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="../Calculator/Images/David.jpg">
+    <link rel="shortcut icon" href="/Images/David.jpg">
   </head>
 
   <body>
@@ -26,10 +26,10 @@
     <div id="explanatory-text-container">
       <label id="label-keyboard">Supports keyboard buttons as well!</label>
       <label id="label-button-c" class="label-button-explanations">
-        Press <img src="../Calculator/Images/C.png" alt="C-button" class="image-button"> to clear all entries
+        Press <img src="/Images/C.png" alt="C-button" class="image-button"> to clear all entries
       </label>
       <label id="label-button-c" class="label-button-explanations">
-        Press <img src="../Calculator/Images/Enter.png" alt="Enter-button" class="image-button"> to get the answer
+        Press <img src="/Images/Enter.png" alt="Enter-button" class="image-button"> to get the answer
       </label>
     </div>
   </body>
